# kafka-delta-ingest

./: Cargo.toml
kafka-delta-ingest/: Cargo.toml
kafka-delta-ingest-wasm/: Cargo.toml
kafka-delta-ingest-wasm-sdk/: Cargo.toml
kafka-delta-ingest-wasm-sdk/src/: dispatcher.rs  hostcalls.rs  lib.rs  logger.rs  traits.rs  types.rs
kafka-delta-ingest-wasm/src/: exports.rs  imports.rs  lib.rs
kafka-delta-ingest/tests/: delta_partitions_tests.rs  emails_azure_blob_tests.rs  emails_s3_tests.rs
kafka-delta-ingest/tests/helpers/: mod.rs
