[package]
name = "kafka-delta-ingest-wasm-sdk"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hashbrown = "0.14"
kafka-delta-ingest-wasm-types = { path = "../kafka-delta-ingest-wasm-types", version = "0.2.0" }
log = { workspace = true }
num-traits = { workspace = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"