[package]
name = "kafka-delta-ingest-wasm"
version = "0.2.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>", "Christian Williams <christianw@scribd.com>"]
edition = "2018"

[dependencies]
chrono = { workspace = true }
kafka-delta-ingest-wasm-types = { path = "../kafka-delta-ingest-wasm-types", version = "0.2.0" }
log = { workspace = true }
num-traits = { workspace = true }
rdkafka = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasmtime = { version="16.0.0" }



[dev-dependencies]
utime = "0.3"
serial_test = "*"
tempfile = "3"
time = "0.3.20"

[profile.release]
lto = true
